src/test/ui/regions/regions-addr-of-arg.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/regions-addr-of-arg.rs:5:30
   |
LL |     let _p: &'static isize = &a;
   |             --------------   ^^ borrowed value does not live long enough
   |             |
   |             type annotation requires that `a` is borrowed for `'static`
LL | }
   |  - `a` dropped here while still borrowed

error[E0597]: `a` does not live long enough
  --> $DIR/regions-addr-of-arg.rs:13:5
   |
LL |     &a
   |     ^^ borrowed value does not live long enough
LL | }
   |  -
   |  |
   |  `a` dropped here while still borrowed
   |  borrow later used here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
